--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button onclick="save()">Save</button>
+        <button onclick="deleteSave()">Delete</button>
+        <a id="downloadAnchorElem" style="display:none"></a>
+        <button onclick="download()">Create file</button>
+    </div>
+    <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js"></script>
+    <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="utils.js"></script>
+    <script src="traffic.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
